# Spec_Viterbi

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp  run_clang_tidy.sh  run_tests.sh
Viterbi_impl/: CMakeLists.txt  CUSP_compiler_fence.h  CUSP_helper.cpp  CUSP_helper.cu  CUSP_helper.h  CUSP_impl.cpp  CUSP_impl.cu  CUSP_impl.h  CUSP_spec_impl.cpp  CUSP_spec_impl.cu  CUSP_spec_impl.h  GraphBLAS_helper.cpp  GraphBLAS_helper.h  GraphBLAS_impl.cpp  GraphBLAS_impl.h  GraphBLAS_manager.cpp  GraphBLAS_manager.h  GraphBLAS_spec_impl.cpp  GraphBLAS_spec_impl.h  HMM.h  Viterbi_impl.h  Viterbi_spec_impl.h  cuASR_helper.cu  cuASR_helper.h  cuASR_impl.cu  cuASR_impl.h  cuASR_spec_impl.cu  cuASR_spec_impl.h  data_reader.cpp  data_reader.h
benchmark/: CMakeLists.txt  bench_Viterbi.h  bench_Viterbi_spec.h  benchmark_helper.h  sum_dat.py
chmm_files/: 100.chmm  1001.chmm  1100.chmm  1200.chmm  1301.chmm  1400.chmm  1509.chmm  1600.chmm  1705.chmm  1799.chmm  1901.chmm  200.chmm  2050.chmm  2138.chmm  2207.chmm  2365.chmm  2405.chmm  300.chmm  400.chmm  500.chmm  600.chmm  700.chmm  800.chmm  900.chmm  chmm_gen.py  silent_hmm_to_chmm.py  test_chmm.chmm
chmm_files/test_chmms/: 0_test_chmm.chmm  1_test_chmm.chmm  2_test_chmm.chmm  3_test_chmm.chmm
ess_files/: covid-19.ess  covid-19.fasta  emit_3_3500_20.ess  emit_3_7000_20.ess  emit_50_3500_20.ess  emit_50_7000_20.ess  ess_gen.py  fasta_to_ess.py  test_seq.ess
ess_files/test_sequences/: 1_test_seq.ess  2_test_seq.ess  3_test_seq.ess
tests/: CMakeLists.txt  test_CUSP_impl.cpp  test_CUSP_spec_impl.cpp  test_GraphBLAS_impl.cpp  test_GraphBLAS_spec_impl.cpp  test_chmm_reader.cpp  test_cuASR_impl.cpp  test_cuASR_spec_impl.cpp  test_ess_reader.cpp  test_helper.h  test_semantic_equality.cpp
